# efl-meson-ci

./: README.meson  meson.build  meson_options.txt
.ci/: ci-osx-build.sh
header_checks/: meson.build
scripts/: create_all_options.lua
src/generic/emotion/: meson.build
src/lib/edje/: meson.build
src/lib/efreet/: meson.build
src/lib/eio/: meson.build
src/lib/embryo/: meson.build
src/lib/ethumb_client/: meson.build
src/lib/evas/: meson.build
src/lib/evas_goal/: meson.build
src/modules/ecore_imf/: meson.build
src/modules/ecore_imf/xim/: meson.build
src/modules/emotion/: meson.build
src/modules/emotion/generic/: meson.build
src/modules/emotion/gstreamer/: meson.build
src/modules/emotion/gstreamer1/: meson.build
src/modules/emotion/libvlc/: meson.build
src/modules/emotion/xine/: meson.build
src/modules/ethumb/: meson.build
src/modules/ethumb/emotion/: meson.build
src/modules/evas/: meson.build
src/tests/ecore_con/: ecore_con_test_efl_net_ip_address.c
src/tests/edje/: meson.build
src/tests/edje/data/: meson.build
src/tests/emotion/: meson.build
